syntax = "proto3";

package user.v1;

option go_package = "github.com/Akash-Manikandan/blogger-service/proto/user/v1";

import "buf/validate/validate.proto";

service UserService {
  // CreateUser creates a new user account with the provided username, email and password.
  // The username must be 3-20 characters long and can only contain letters, numbers and underscores.
  // The email must be a valid email address.
  // The password must be 6-50 characters long.
  // Returns the created user details along with an authentication token.
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);

  // Login authenticates a user with their email and password.
  // The email must be a valid email address.
  // The password must be 6-50 characters long.
  // Returns user details and an authentication token on successful login.
  rpc Login(LoginRequest) returns (LoginResponse);
}

message CreateUserRequest {
  string username = 1 [
    (buf.validate.field).string = {
      min_len: 3,
      max_len: 20,
      pattern: "^[a-zA-Z0-9_]+$"
    }
  ];
  
  string email = 2 [(buf.validate.field).string.email = true];
  
  string password = 3 [
    (buf.validate.field).string = {
      min_len: 6,
      max_len: 50
    }
  ];
}


message CreateUserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
  string created_at = 4;
  string updated_at = 5;
  string token = 6;
}

message LoginRequest {
  string email = 1 [
    (buf.validate.field).string.email = true
  ];
  
  string password = 2 [
    (buf.validate.field).string = {
      min_len: 6,
      max_len: 50
    }
  ];
}

message LoginResponse {
  string token = 1;
  string email = 2;
  string username = 3;
  string id = 4;
  string created_at = 5;
  string updated_at = 6;
}

message User {
  string id = 1;
  string username = 2;
  string email = 3;
}